--- a/dpi_tsa/pom.xml
+++ b/dpi_tsa/pom.xml
@@ -44,7 +44,6 @@ opendaylight.snapshot/</url>
 </repositories>
  
  
- 
   <scm>
     <connection>scm:git:ssh://git.opendaylight.org:29418/controller.git</connection>
     <developerConnection>scm:git:ssh://git.opendaylight.org:29418/controller.git</developerConnection>
@@ -76,8 +75,19 @@ opendaylight.snapshot/</url>
       </plugin>
     </plugins>
   </build>
+  
   <dependencies>
-  	  <dependency>
+  	<dependency>
+			<groupId>org.sdnhub.odl</groupId>
+			<artifactId>protocol_plugins.openflow13</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+	</dependency>
+	<dependency>
+		<groupId>org.sdnhub.odl</groupId>
+		<artifactId>ofbroker</artifactId>
+		<version>0.1.0-SNAPSHOT</version>
+	</dependency>
+  	<dependency>
       <groupId>org.opendaylight.controller</groupId>
       <artifactId>hosttracker</artifactId>
     </dependency>
